  - same for all the parent extent files?

Tests:
* add open close
* add read
* add seek
* add integrity tests
* add pyvmdk

Deployment:
* check manuals
  - update libvmdk.3
  - update vmdkinfo.1
  - add vmdkmount.1

* Test images
  - vmdk flat
  - vmdk flat split
  - Monolithic sparse (done)
  - 2GB extent sparse (done)
  - cowd sparse
  - cowd sparse split
  - compressed?

20130522
* changes for deployment

20130521
* changes for deployment

20130520
* changes for deployment

20130517
* changes for extent descriptor parsing
  - added support for extent descriptor with additional values
  - added support for ZERO extent descriptor

20130516
* worked on mfdata refactor
* added support for flat extent files
* worked on COWD extent file support
* changes for deployment

20130515
* worked on mfdata refactor

20130514
* worked on mfdata refactor

20130513
* worked on mfdata refactor

20130512
* updated dependencies
* added to macosx files
* worked on Python bindings

20130427
* 2013 update
* updated dependencies

20121201
* worked on parent image support

20121129
* worked on parent image support
* updated libvmdk.3 man page

20121128
* worked on parent image support

20121127
* worked on parent image support
* updated libvmdk.3 man page

20120924
* added extent data file sector restriction
* bug fixes
* code clean up

20120923
* worked on multi-file image support

20120922
* code clean up
* worked on descriptor file support
* worked on multi-file image support

20120921
* renamed segment file into extent file
* merged segment file and segment file handle
* worked on descriptor file support

20120920
* applied updates
* changes due to updates
* code clean up
* created debian package files

20100418
* added libcstring
* updated common, liberror, libnotify, libuna, libbfio, libsystem
* changed libvmdk_file to libvmdk_handle
* added support for multiple source files
* worked on descriptor file

20100314
* string fix in vmdkinfo
* moved file io handle into libvmdk_file
