@@ -61,6 +61,9 @@ Deployment:
   - cowd sparse split
   - compressed?
 
+20130608
+* worked on tests
+
 20130522
 * changes for deployment
 
